prepare base CRUD operations for Task
