# app/Models/Task.php
@@ -27,6 +27,7 @@ class Task extends Model
         'title',
         'description',
         'due_date',
+        'completed'
     ];
 
     protected $attributes = [
